--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1,15 +1,634 @@
-.clearfix:after {
-  content: '';
-  display: table;
-  clear: both; }
+.social-links,
+.footer-links__list,
+.app__list,
+.promo-block .list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.clearfix:after,
+.modal-reg .modal-footer:after,
+.modal-reg .modal-body:after {
+	content: "";
+	display: table;
+	clear: both;
+}
 
 .ellipsis {
-  white-space: nowrap;
-  /* 1 */
-  text-overflow: ellipsis;
-  /* 2 */
-  overflow: hidden; }
+	white-space: nowrap; /* 1 */
+	text-overflow: ellipsis; /* 2 */
+	overflow: hidden;
+}
 
-#wrapper {
-  max-width: 1000px; }
-/*# sourceMappingURL=main.css.map */
+@font-face {
+	font-family: "icomoon";
+	src: url("../fonts/icomoon.eot?6fuf7u");
+	src: url("../fonts/icomoon.eot?6fuf7u#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?6fuf7u") format("truetype"), url("../fonts/icomoon.woff?6fuf7u") format("woff"), url("../fonts/icomoon.svg?6fuf7u#icomoon") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: "icomoon";
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1; /* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-car:before {
+	content: "\e906";
+	color: #f38230;
+}
+
+.icon-home:before {
+	content: "\e907";
+	color: #2f5397;
+}
+
+.icon-support:before {
+	content: "\e908";
+	color: #2f5397;
+}
+
+.icon-facebook:before {
+	content: "\e900";
+}
+
+.icon-web:before {
+	content: "\e901";
+}
+
+.icon-ok:before {
+	content: "\e902";
+}
+
+.icon-twitter:before {
+	content: "\e903";
+}
+
+.icon-vk:before {
+	content: "\e904";
+}
+
+.icon-youtube:before {
+	content: "\e905";
+}
+
+.icon-android:before {
+	content: "\e909";
+}
+
+.icon-apple:before {
+	content: "\e90a";
+}
+
+.icon-windows:before {
+	content: "\e90b";
+}
+
+.icon-gift:before {
+	content: "\e90c";
+}
+
+.btn {
+	display: inline-block;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 700;
+	padding: 12px 40px;
+	border-radius: 4px;
+	text-decoration: none;
+	border: none;
+	-webkit-transition: all .2s ease-in-out 0s;
+	transition: all .2s ease-in-out 0s;
+}
+
+.btn:hover {
+	box-shadow: 0 5px 10px rgba(243, 130, 48, .75);
+	color: #fff;
+	background: #f38230;
+	text-decoration: none;
+}
+
+.btn-primary {
+	background: #f38230;
+	color: #fff;
+}
+
+.btn-default {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-weight: 400;
+	color: #f38230;
+	border: 1px solid #f38230;
+}
+
+.btn-default:hover {
+	box-shadow: none;
+	border-color: #f38230;
+}
+
+.btn-default:focus {
+	color: #fff;
+	box-shadow: none;
+	background: #f59652;
+	border-color: #f59652;
+}
+
+/* #header */
+
+.header {
+	padding: 0 0 30px;
+	background: #fff url(../images/bg-intro.png) repeat-x;
+}
+
+.header .logo {
+	margin: 43px 0 30px;
+}
+
+.header .logo a {
+	display: inline-block;
+}
+
+.header .title h1 {
+	font-size: 30px;
+	color: #2f5397;
+}
+
+.header .subtitle {
+	color: #2f5397;
+	font-size: 20px;
+	margin: 0 0 35px;
+	display: inline-block;
+}
+
+#email {
+	display: none;
+}
+
+#email:target {
+	display: block;
+}
+
+/* #footer */
+
+.footer {
+	background: #0c4da2;
+	color: #fff;
+	padding: 29px 0 12px;
+}
+
+.footer a {
+	color: #fff;
+}
+
+.footer h3 {
+	margin: 0 0 10px;
+}
+
+.footer__top {
+	margin-bottom: 19px;
+}
+
+.short-links {
+	margin-bottom: 38px;
+}
+
+.short-links:last-child {
+	margin-bottom: 0;
+}
+
+.short-links h3 {
+	padding-bottom: 10px;
+	position: relative;
+}
+
+.short-links h3:after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 0;
+	background: #f38230;
+	height: 2px;
+	width: 53px;
+}
+
+.short-links a {
+	text-decoration: underline;
+}
+
+.short-links a:hover {
+	text-decoration: none;
+}
+
+.short-links .icon-web {
+	font-size: 18px;
+	margin-right: 18px;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.social-links {
+	padding-top: 8px;
+}
+
+.social-links li {
+	display: inline-block;
+	margin-left: 16px;
+	font-size: 20px;
+	line-height: 1;
+}
+
+.social-links li:first-child {
+	margin-left: 0;
+}
+
+.social-links a {
+	-webkit-transition: all .2s ease-in-out 0s;
+	transition: all .2s ease-in-out 0s;
+	text-decoration: none;
+	min-height: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.social-links a:hover {
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+.social-links .icon-vk {
+	font-size: 24px;
+}
+
+.social-links .icon-youtube {
+	font-size: 24px;
+}
+
+.footer-links__list {
+	padding-top: 3px;
+}
+
+.footer-links__list li {
+	margin-bottom: 4px;
+}
+
+.app h3 {
+	margin-bottom: 27px;
+}
+
+.app__row {
+	margin-bottom: 16px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.app__row:last-child {
+	margin-bottom: 0;
+}
+
+.app__title {
+	margin-right: 17px;
+	min-width: 90px;
+}
+
+.app__list {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.app__list li {
+	margin-right: 20px;
+	font-size: 21px;
+}
+
+.app__list a {
+	-webkit-transition: all .2s ease-in-out 0s;
+	transition: all .2s ease-in-out 0s;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.app__list a:hover {
+	text-decoration: none;
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+.footer-info {
+	font-size: 14px;
+	line-height: 1.143;
+	color: #949494;
+	border-top: 1px solid #8e9095;
+	padding: 18px 0 21px;
+}
+
+.footer-info p {
+	margin-bottom: 25px;
+}
+
+.footer-info p:last-of-type {
+	margin-bottom: 0;
+}
+
+/* #style modals */
+
+.modal-reg {
+	max-width: 456px;
+}
+
+.modal-reg label {
+	font-weight: 400;
+}
+
+.modal-reg .modal-content {
+	border: 0;
+	font-size: 14px;
+	background: none;
+}
+
+.modal-reg .modal-header {
+	border: 0;
+	padding: 36px 10px 21px;
+	color: #fff;
+	background: #2f5397;
+	border-radius: 6px 6px 0 0;
+	text-align: center;
+}
+
+.modal-reg .modal-header .close {
+	color: #fff;
+	opacity: 1;
+	margin: -28px 4px 0 0;
+	font-weight: 200;
+}
+
+.modal-reg .modal-footer,
+.modal-reg .modal-body {
+	background: #fff;
+	padding: 20px;
+}
+
+.modal-reg .modal-footer {
+	border: 0;
+	padding-bottom: 26px;
+	border-radius: 0 0 6px 6px;
+}
+
+.modal-reg .modal-footer:after {
+	content: "";
+	display: block;
+	background: url(../images/bg-modal.png) no-repeat;
+	width: 37px;
+	height: 6px;
+	margin: 34px auto 0;
+}
+
+.modal-reg .label-block {
+	display: block;
+	padding-left: 12px;
+	color: #2f5397;
+	margin-bottom: 8px;
+}
+
+.modal-reg .term-checkbox {
+	color: #a8a8a8;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	margin-right: -20px;
+	padding-top: 20px;
+}
+
+.modal-reg .term-checkbox a {
+	text-decoration: underline;
+}
+
+.modal-reg .term-checkbox a:hover {
+	text-decoration: none;
+}
+
+.modal-reg .term-checkbox label {
+	margin: 0;
+}
+
+.modal-reg .term-checkbox input[type="checkbox"] {
+	border: 1px solid #2f5397;
+	border-radius: 3px;
+	width: 15px;
+	height: 15px;
+	margin: 0 4px 0 0;
+	padding: 0;
+}
+
+.promo-block {
+	line-height: 1.75;
+	padding-bottom: 79px;
+}
+
+.promo-block .post {
+	padding: 20px;
+	box-shadow: 0 0 35px rgba(0, 0, 0, .1);
+	border-radius: 4px;
+}
+
+.promo-block .post p {
+	margin-bottom: 5px;
+}
+
+.promo-block .title {
+	color: #2f5397;
+	margin: 0 0 5px;
+}
+
+.promo-block .title h2 {
+	font-size: 22px;
+	font-weight: 700;
+	margin: 0;
+}
+
+.promo-block .subtitle {
+	display: inline-block;
+	font-size: 18px;
+	color: #2f5397;
+	margin: 0 0 25px;
+}
+
+.promo-block .list {
+	padding-top: 11px;
+}
+
+.promo-block .list li {
+	position: relative;
+	margin: 0 0 15px;
+	padding-left: 42px;
+}
+
+.promo-block .list [class*="icon"] {
+	position: absolute;
+	top: 7px;
+	left: 0;
+	font-size: 20px;
+	color: #2f5397;
+}
+
+.promo-block .list .icon-support {
+	font-size: 28px;
+}
+
+.promo-block .list .icon-car {
+	font-size: 16px;
+	left: 0;
+	color: #f38230;
+}
+
+.promo-block .list a {
+	color: #004c94;
+	padding: 0 0 2px;
+}
+
+.promo-block .list a:hover {
+	text-decoration: none;
+	border-bottom: 1px solid #004c94;
+}
+
+.promo-block .post__btn {
+	padding-top: 30px;
+}
+
+.promo-block [aria-expanded="false"] .opened {
+	display: none;
+}
+
+.promo-block [aria-expanded="true"] .opened {
+	display: inline;
+}
+
+.promo-block [aria-expanded="true"] .closed {
+	display: none;
+}
+
+.cta {
+	padding: 41px 0 78px;
+	background: #f5f5f5;
+}
+
+.cta h2 {
+	text-transform: uppercase;
+	margin: 0 0 2px;
+}
+
+.cta__heading-decor {
+	position: relative;
+	display: inline-block;
+	padding: 0 18px;
+	color: #f38230;
+	font-size: 32px;
+	margin-bottom: 44px;
+}
+
+.cta__heading-decor:before,
+.cta__heading-decor:after {
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translate(0, -50%);
+	-ms-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	content: "";
+	background: #f38230;
+	height: 2px;
+	width: 38px;
+}
+
+.cta__heading-decor:after {
+	right: 100%;
+}
+
+.cta__heading-decor:before {
+	left: 100%;
+}
+
+.cta__text {
+	margin-top: -7px;
+}
+
+.cta__text p {
+	margin-bottom: 33px;
+}
+
+.cta__title {
+	display: block;
+	margin-bottom: 19px;
+}
+
+.cta__image {
+	box-shadow: 0 6px 21px rgba(0, 0, 0, .1);
+	display: -webkit-inline-box;
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	margin-bottom: 35px;
+}
+
+.cta__image img {
+	border-radius: 5px;
+}
+
+@media (min-width: 768px) {
+	.modal-reg .modal-footer,
+	.modal-reg .modal-body {
+		padding: 30px 83px 0;
+	}
+
+	.promo-block .post {
+		padding: 50px 70px 35px 80px;
+	}
+}
+
+@media (min-width: 1024px) {
+	.cta__image {
+		margin-bottom: 0;
+	}
+}
+
+@media (min-width: 1200px) {
+	.header .img-holder {
+		margin-right: -40px;
+	}
+}
+
+@media (max-width: 1023px) {
+	.footer-block {
+		margin-bottom: 25px;
+	}
+}
+
