--- a/markup/scss/_bootstrap-custom.scss
+++ b/markup/scss/_bootstrap-custom.scss
@@ -1,23 +1,23 @@
 // custom variables and override bootstrap variables
 
 $body-bg:						#fff;
-$text-color:					#505050;
+$text-color:					#000;
 
-$brand-primary:					#4a90e2;
-$brand-success:					#7ed321;
-$link-color:					$text-color;
+$brand-primary:					#f38230;
+$brand-success:					#2f5397;
+$link-color:					#004c94;
 
 $font-size-base:				16px;
 $line-height-base:				1.625;
 
 $font-size-h1:					$font-size-base * 2.5; //~40px
-$font-size-h2:					$font-size-base * 2.125; //~34px
+$font-size-h2:					$font-size-base * 1.5625; //~26px
 $font-size-h3:					$font-size-base * 1.375; //~22px
 $font-size-h4:					$font-size-base * 1.25; //~20px
 $font-size-h5:					$font-size-base * 1.125; //~18px
 $font-size-h6:					$font-size-base; //16px
 
-$container-large-desktop:		940px;
+$container-large-desktop:		970px;
 
 //buttons
 $btn-primary-color:				$brand-primary;
@@ -25,22 +25,25 @@ $btn-primary-color:				$brand-primary;
 // inputs
 $input-bg:						#fff;
 $input-color:					$text-color;
-$input-border:					#b4b4b4;
-$input-border-focus:			$brand-primary;
-$input-color-placeholder:		$input-color;
-$form-group-margin-bottom:		19px;
+$input-border:					$brand-success;
+$input-border-focus:			$brand-success;
+$input-color-placeholder:		#a8a8a8;
+$form-group-margin-bottom:		1em;
 
-$input-border-radius:			2px;
+$input-border-radius:			5px;
 $border-radius-base:			2px;
 $border-radius-large:			0;
 $border-radius-small:			0;
 
 $font-family-sans-serif:		Tahoma, Arial, sans-serif;
 $headings-font-family:			$font-family-sans-serif;
-$headings-font-weight:			400;
+$headings-font-weight:			700;
 $headings-line-height:			1.2;
 
-$modal-border-radius:			6px;
+$modal-content-border-color:	transparent;
+$modal-border-radius:			0;
 $modal-content-bg:				#fff;
-$modal-backdrop-bg:				rgba(0,0,0,.85);
+$modal-backdrop-bg:				rgba(0,0,0,.8);
 $modal-backdrop-opacity:		1;
+
+$footer-bg:						#0c4da2;
