--- a/markup/scss/bootstrap.scss
+++ b/markup/scss/bootstrap.scss
@@ -13,7 +13,7 @@
 // Reset and dependencies
 @import "vendors/bootstrap/normalize";
 @import "vendors/bootstrap/print";
-@import "vendors/bootstrap/glyphicons";
+// @import "vendors/bootstrap/glyphicons";
 
 // Core CSS
 @import "vendors/bootstrap/scaffolding";
@@ -25,7 +25,7 @@
 @import "vendors/bootstrap/buttons";
 
 // Components
-// @import "vendors/bootstrap/component-animations";
+@import "vendors/bootstrap/component-animations";
 // @import "vendors/bootstrap/dropdowns";
 // @import "vendors/bootstrap/button-groups";
 // @import "vendors/bootstrap/input-groups";
@@ -45,7 +45,7 @@
 // @import "vendors/bootstrap/panels";
 // @import "vendors/bootstrap/responsive-embed";
 // @import "vendors/bootstrap/wells";
-// @import "vendors/bootstrap/close";
+@import "vendors/bootstrap/close";
 
 // Components w/ JavaScript
 @import "vendors/bootstrap/modals";
@@ -55,4 +55,4 @@
 
 // Utility classes
 // @import "vendors/bootstrap/utilities";
-// @import "vendors/bootstrap/responsive-utilities";
+@import "vendors/bootstrap/responsive-utilities";
