--- a/markup/scss/_buttons.scss
+++ b/markup/scss/_buttons.scss
@@ -24,6 +24,7 @@
 	padding-bottom: 5px;
 	font-weight: 400;
 	color: #f38230;
+	background: #fff;
 	border: 1px solid $brand-primary;
 	&:hover {
 		box-shadow: none;
