--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -371,6 +371,8 @@
 
 .modal-reg {
 	max-width: 456px;
+	margin: 0 auto;
+	padding-top: 20px;
 }
 
 .modal-reg label {
@@ -407,17 +409,8 @@
 
 .modal-reg .modal-footer {
 	border: 0;
-	padding-bottom: 26px;
+	padding-bottom: 40px;
 	border-radius: 0 0 6px 6px;
-}
-
-.modal-reg .modal-footer:after {
-	content: "";
-	display: block;
-	background: url(../images/bg-modal.png) no-repeat;
-	width: 37px;
-	height: 6px;
-	margin: 34px auto 0;
 }
 
 .modal-reg .label-block {
@@ -433,11 +426,10 @@
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-	margin-right: -20px;
+	-webkit-box-align: start;
+	-webkit-align-items: flex-start;
+	-ms-flex-align: start;
+	align-items: flex-start;
 	padding-top: 20px;
 }
 
@@ -458,7 +450,7 @@
 	border-radius: 3px;
 	width: 15px;
 	height: 15px;
-	margin: 0 4px 0 0;
+	margin: 5px 4px 0 0;
 	padding: 0;
 }
 
@@ -611,11 +603,8 @@ body {
 
 .cta__image {
 	box-shadow: 0 6px 21px rgba(0, 0, 0, .1);
-	display: -webkit-inline-box;
-	display: -webkit-inline-flex;
-	display: -ms-inline-flexbox;
-	display: inline-flex;
-	margin-bottom: 35px;
+	display: table;
+	margin: 0 auto 35px;
 }
 
 .cta__image img {
@@ -623,31 +612,84 @@ body {
 }
 
 @media (min-width: 768px) {
+	.header .img-holder {
+		margin-left: -20px;
+		margin-right: -20px;
+	}
+
 	.modal-reg .modal-footer,
 	.modal-reg .modal-body {
 		padding: 30px 83px 0;
 	}
 
+	.modal-reg .term-checkbox {
+		margin-right: -20px;
+	}
+
 	.promo-block .post {
 		padding: 50px 70px 0 80px;
+	}
+
+	.cta__image {
+		display: -webkit-inline-box;
+		display: -webkit-inline-flex;
+		display: -ms-inline-flexbox;
+		display: inline-flex;
 	}
 }
 
 @media (min-width: 1024px) {
+	.header .img-holder {
+		margin-left: 0;
+		margin-right: -40px;
+	}
+
 	.cta__image {
 		margin-bottom: 0;
-	}
-}
-
-@media (min-width: 1200px) {
-	.header .img-holder {
-		margin-right: -40px;
 	}
 }
 
 @media (max-width: 1023px) {
 	.footer-block {
 		margin-bottom: 25px;
+	}
+}
+
+@media (max-width: 767px) {
+	.header {
+		text-align: center;
+	}
+
+	.header .img-holder img {
+		margin: 0 auto;
+	}
+
+	.footer__top {
+		-webkit-box-pack: justify;
+		-webkit-justify-content: space-between;
+		-ms-flex-pack: justify;
+		justify-content: space-between;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+	}
+
+	.footer__top:before,
+	.footer__top:after {
+		display: none;
+	}
+}
+
+@media (max-width: 479px) {
+	.footer__top {
+		-webkit-box-pack: start;
+		-webkit-justify-content: flex-start;
+		-ms-flex-pack: start;
+		justify-content: flex-start;
 	}
 }
 
