--- a/markup/scss/_modal.scss
+++ b/markup/scss/_modal.scss
@@ -2,6 +2,8 @@
 
 .modal-reg {
 	max-width: 456px;
+	margin: 0 auto;
+	padding-top: 20px;
 	label {
 		font-weight: 400;
 	}
@@ -35,16 +37,8 @@
 	}
 	.modal-footer {
 		border: 0;
-		padding-bottom: 26px;
+		padding-bottom: 40px;
 		border-radius: 0 0 6px 6px;
-		&:after {
-			content: '';
-			display: block;
-			background: url(../images/bg-modal.png) no-repeat;
-			width: 37px;
-			height: 6px;
-			margin: 34px auto 0;
-		}
 	}
 	.label-block {
 		display: block;
@@ -55,24 +49,24 @@
 	.term-checkbox {
 		color: #a8a8a8;
 		display: flex;
-		align-items: center;
-		margin-right: -20px;
+		align-items: flex-start;
 		padding-top: 20px;
+		@include media('>=tablet') {
+			margin-right: -20px;
+		}
 		a{
 			text-decoration: underline;
 			&:hover {
 				text-decoration: none;
 			}
 		}
-		label {
-			margin: 0;
-		}
+		label { margin: 0; }
 		input[type="checkbox"] {
 			border: 1px solid $brand-success;
 			border-radius: 3px;
 			width: 15px;
 			height: 15px;
-			margin: 0 4px 0 0;
+			margin: 5px 4px 0 0;
 			padding: 0;
 		}
 	}
