--- a/markup/scss/_bootstrap-custom.scss
+++ b/markup/scss/_bootstrap-custom.scss
@@ -46,5 +46,5 @@ $modal-content-bg:				#fff;
 $modal-backdrop-bg:				rgba(0,0,0,.8);
 $modal-backdrop-opacity:		1;
 
-$footer-bg:						#004b93;
+$footer-bg:						#2f5397;
 $footer-color:					#d1d1d1;
